<resources>
    <string name="app_name">IonageAssignment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="try_hulk_thor">Try Hulk, Thor…</string>
    <string name="netflix">Netflix</string>
    <string name="out_of_10">(out of 10)</string>
    <string name="director">Director\:</string>
    <string name="genre">Genre\:</string>
    <string name="actors">Actors\:</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</string>
</resources>